NoSideExperiment: Fix things looking too wide on larger displays

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -48,7 +48,7 @@
         -webkit-box-pack: start;
         -ms-flex-pack: start;
         justify-content: start;
-        max-width: 75vw !important;
+        max-width: 1500px !important;
         width: 75vw;
     }
     footer.foot1 {
